--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,12 @@ jobs:
         
       # run tests!
       # run: yarn test
+	      
+  dependencies:
+	override:
+	  - npm install -g firebase-tools
+  deployment:
+   	deploy:
+	  branch: master
+	  commands:
+        - firebase deploy --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
