--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,9 @@
-dependencies:
-  override:
-    - npm install -g firebase-tools
-deployment:
-  deploy:
-    branch: master
-    commands:
-      - firebase deploy --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
+jobs:
+  dependencies:
+    override:
+      - npm install -g firebase-tools
+  deployment:
+    deploy:
+      branch: master
+      commands:
+        - firebase deploy --project "mymarkdown2" --token "1/w1qvnmL6Y9q3uluzF3PV3-lXA1IBtRN1-SSVSaKo52I"
