--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,16 @@
 jobs:
   dependencies:
     override:
-      - npm install -g firebase-tools
+    - npm install -g firebase-tools
+    steps: null
   deployment:
     deploy:
       branch: master
       commands:
-        - firebase deploy --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
+      - firebase deploy --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
+    steps: null
+workflows:
+  version: 2
+  workflow:
+    jobs:
+    - build
