--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,40 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
+version: 2
 jobs:
-  dependencies:
-    override:
-    - npm install -g firebase-tools
-    steps: null
-  deployment:
-    deploy:
-      branch: master
-      commands:
-      - firebase deploy --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
-    steps: null
-workflows:
-  version: 2
-  workflow:
-    jobs:
-    - build
+  build:
+    docker:
+      - image: circleci/node:8
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: npm install
+      - run:
+          name: 'Install Dependecies'
+          command: npm install --save-dev firebase-tools
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run:
+          name: 'Build Client Code(react-scripts によるビルド実行)'
+          command: npm run build
+      - run:
+          name: 'Deploy to Hosting'
+          command: >- 
+              ln -s ./node_modules/firebase-tools/bin/firebase . &&
+              ./firebase deploy --only hosting --project "$FIREBASE_PROJECT_ID" --token "$FIREBASE_TOKEN"
