--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run:
-          name: 'Build Client Code(react-scripts によるビルド実行)'
+          name: 'Build Client Code(react-scripts によるビルド実行します)'
           command: npm run build
       - run:
           name: 'Deploy to Hosting'
