--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,4 +37,4 @@ jobs:
           name: 'Deploy to Hosting'
           command: >- 
               ln -s ./node_modules/firebase-tools/bin/firebase . &&
-              ./firebase deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
+              ./mymarkdown2 deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
