--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,4 @@ jobs:
           command: npm run build
       - run:
           name: 'Deploy to Hosting'
-          command: >- 
-              ln -s ./node_modules/firebase-tools/bin/firebase . &&
-              ./mymarkdown2 deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
+          command: firebase deploy
