--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@
 #
 version: 2
 jobs:
+  dependencies:
+    override:
+      - npm install -g firebase-tools
   build:
     docker:
       - image: circleci/node:8
@@ -35,4 +38,6 @@ jobs:
           command: npm run build
       - run:
           name: 'Deploy to Hosting'
-          command: firebase deploy
+          command: >- 
+              ln -s ./node_modules/firebase-tools/bin/firebase . &&
+              ./firebase deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
