--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,6 @@
 #
 version: 2
 jobs:
-  dependencies:
-    override:
-      - npm install -g firebase-tools
   build:
     docker:
       - image: circleci/node:8
@@ -24,6 +21,9 @@ jobs:
           - v1-dependencies-
 
       - run: npm install
+
+      - run: npm audit fix
+
       - run:
           name: 'Install Dependecies'
           command: npm install --save-dev firebase-tools
@@ -34,7 +34,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run:
-          name: 'Build Client Code(react-scripts によるビルド実行します)'
+          name: 'Build Client Code(react-scripts によるビルド実行)'
           command: npm run build
       - run:
           name: 'Deploy to Hosting'
