--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,8 @@ jobs:
           name: 'Install Dependecies'
           command: npm install --save-dev firebase-tools
 
+      - run: npm audit fix
+
       - save_cache:
           paths:
             - node_modules
