--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,9 +34,10 @@ jobs:
       - run:
           name: 'Build Client Code(react-scripts によるビルド実行)'
           command: npm run build
-
+          
       - run:
           name: 'Deploy to Hosting'
           attach_workspace:
             at: .
-          command: ./node_modules/firebase-tools/bin/firebase deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
+          command: >- 
+              ln -s ./node_modules/firebase-tools/bin/firebase . && ./firebase deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
