--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,4 @@ jobs:
           name: 'Deploy to Hosting'
           attach_workspace:
             at: .
-          command: >- 
-              ln -s ./node_modules/firebase-tools/bin/firebase . && ./firebase deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
+          command: node_modules/firebase-tools/bin/firebase . && ./firebase deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
