--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,4 @@ jobs:
           
       - run:
           name: 'Deploy to Hosting'
-          attach_workspace:
-            at: .
-          command: find `pwd` -maxdepth 1
+          command: repo/node_modules/firebase-tools/bin/firebase deploy --only hosting --project "$FIREBASE_PJ" --token "$FIREBASE_TOKEN"
